--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
      limitations under the License.
 -->
     <string name="app_name">PopularMovies</string>
+    <string name="most_popular">Most popular</string>
+    <string name="top_rated">Top rated</string>
+    <string name="error_network_message">Failed to get results. Please check your network connection and try again.</string>
 </resources>
